--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-    "name": "speechace-proxy",
-    "version": "1.0.0",
-    "main": "server.js",
-    "type": "module",
-    "scripts": {
-        "start": "node server.js"
-    },
-    "dependencies": {
-        "express": "^4.17.1",
-        "cors": "^2.8.5",
-        "axios": "^0.21.1",
-        "multer": "^1.4.2"
-    }
+  "name": "speechace-proxy",
+  "version": "1.0.0",
+  "description": "Proxy server for SpeechAce API",
+  "main": "server.js",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "axios": "^1.4.0",
+    "multer": "^1.4.5-lts.1",
+    "form-data": "^4.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
